cargo-features = ["edition2024"]

[workspace]
members = [ 
    "apps/getting_started_client",
    "programs/*"
]
resolver = "2"

[workspace.dependencies]
litesvm = "0.6.1"
solana-sdk = "2.2.0"
solana-program = "2.2.0"
borsh = "1.5.7"


[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
