cargo-features = ["edition2024"]

[package]
name = "getting_started_client"
version = "0.1.0"
edition = "2024"

[dependencies]
# solana-client = "2.2.0"
# solana-sdk = "2.2.0"
# tokio = "1.47.1"
solana-client.workspace = true
solana-sdk.workspace = true
tokio.workspace = true


[dev-dependencies]
solana-client = "2.2.0"
