[package]
name = "cpi-pda"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "cpi_pda"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]


[dependencies]
anchor-lang = "0.31.1"
borsh = "1.5.7"
solana-program = "3.0.0"
solana-system-interface = { version = "2.0.0", features = ["bincode"] }

